@@ -16,14 +16,25 @@
 
 package org.axonframework.modelling.command;
 
-import org.axonframework.commandhandling.*;
+import org.axonframework.commandhandling.CommandBus;
+import org.axonframework.commandhandling.CommandHandler;
+import org.axonframework.commandhandling.CommandHandlingComponent;
+import org.axonframework.commandhandling.CommandMessage;
+import org.axonframework.commandhandling.CommandResultMessage;
+import org.axonframework.commandhandling.GenericCommandResultMessage;
+import org.axonframework.commandhandling.NoHandlerForCommandException;
 import org.axonframework.commandhandling.annotation.AnnotationCommandHandlerAdapter;
 import org.axonframework.commandhandling.annotation.CommandMessageHandlingMember;
 import org.axonframework.common.AxonConfigurationException;
 import org.axonframework.common.ReflectionUtils;
 import org.axonframework.common.Registration;
+import org.axonframework.messaging.ClassBasedMessageNameResolver;
+import org.axonframework.messaging.Message;
 import org.axonframework.messaging.MessageHandler;
+import org.axonframework.messaging.MessageNameResolver;
 import org.axonframework.messaging.MessageStream;
+import org.axonframework.messaging.QualifiedName;
+import org.axonframework.messaging.QualifiedNameUtils;
 import org.axonframework.messaging.annotation.ClasspathParameterResolverFactory;
 import org.axonframework.messaging.annotation.HandlerDefinition;
 import org.axonframework.messaging.annotation.MessageHandlingMember;
@@ -35,9 +46,19 @@ import org.axonframework.modelling.command.inspection.CreationPolicyMember;
 
 import java.lang.reflect.Executable;
 import java.lang.reflect.Method;
-import java.util.*;
+import java.util.ArrayList;
+import java.util.HashMap;
+import java.util.HashSet;
+import java.util.List;
+import java.util.Map;
+import java.util.Objects;
+import java.util.Optional;
+import java.util.Set;
 import java.util.concurrent.atomic.AtomicReference;
+import java.util.function.Function;
 import java.util.stream.Collectors;
+import javax.annotation.Nonnull;
+import javax.annotation.Nullable;
 
 import static org.axonframework.common.BuilderUtils.assertNonNull;
 import static org.axonframework.common.BuilderUtils.assertThat;
@@ -48,9 +69,9 @@ import static org.axonframework.modelling.command.AggregateCreationPolicy.NEVER;
  * annotations may appear on methods, in which case a specific aggregate instance needs to be targeted by the command,
  * or on the constructor. The latter will create a new Aggregate instance, which is then stored in the repository.
  * <p>
- * Despite being an {@link CommandHandlingComponent} it does not actually handle the commands. During registration to the
- * {@link CommandBus} it registers the {@link CommandHandlingComponent}s directly instead of itself so duplicate command
- * handlers can be detected and handled correctly.
+ * Despite being an {@link CommandHandlingComponent} it does not actually handle the commands. During registration to
+ * the {@link CommandBus} it registers the {@link CommandHandlingComponent}s directly instead of itself so duplicate
+ * command handlers can be detected and handled correctly.
  *
  * @param <T> the type of aggregate this handler handles commands for
  * @author Allard Buijze
@@ -64,7 +85,8 @@ public class AggregateAnnotationCommandHandler<T> implements CommandHandlingComp
     private final List<MessageHandler<CommandMessage<?>, CommandResultMessage<?>>> handlers;
     private final Set<String> supportedCommandNames;
     private final Map<String, Set<MessageHandler<CommandMessage<?>, CommandResultMessage<?>>>> supportedCommandsByName;
-    private final CreationPolicyAggregateFactory<T> creationPolicyAggregateFactory;
+    private final Map<Class<? extends T>, CreationPolicyAggregateFactory<T>> factoryPerType;
+    private final MessageNameResolver messageNameResolver;
 
     /**
      * Instantiate a Builder to be able to create a {@link AggregateAnnotationCommandHandler}.
@@ -102,17 +124,32 @@ public class AggregateAnnotationCommandHandler<T> implements CommandHandlingComp
         this.commandTargetResolver = builder.commandTargetResolver;
         this.supportedCommandNames = new HashSet<>();
         this.supportedCommandsByName = new HashMap<>();
+        this.messageNameResolver = builder.messageNameResolver;
         AggregateModel<T> aggregateModel = builder.buildAggregateModel();
-        this.creationPolicyAggregateFactory =
-                initializeAggregateFactory(aggregateModel.entityClass(), builder.creationPolicyAggregateFactory);
+        // Suppressing cast to Class<? extends T> as we are definitely dealing with implementations of T.
+        //noinspection unchecked
+        this.factoryPerType = initializeAggregateFactories(
+                aggregateModel.types()
+                              .map(type -> (Class<? extends T>) type)
+                              .collect(Collectors.toList()),
+                builder.creationPolicyAggregateFactory
+        );
+
         this.handlers = initializeHandlers(aggregateModel);
     }
 
-    private CreationPolicyAggregateFactory<T> initializeAggregateFactory(Class<? extends T> aggregateClass,
-                                                                         CreationPolicyAggregateFactory<T> configuredAggregateFactory) {
-        return configuredAggregateFactory != null
-                ? configuredAggregateFactory
-                : new NoArgumentConstructorCreationPolicyAggregateFactory<>(aggregateClass);
+    private Map<Class<? extends T>, CreationPolicyAggregateFactory<T>> initializeAggregateFactories(
+            List<Class<? extends T>> aggregateTypes,
+            CreationPolicyAggregateFactory<T> configuredAggregateFactory
+    ) {
+        Map<Class<? extends T>, CreationPolicyAggregateFactory<T>> typeToFactory = new HashMap<>();
+        for (Class<? extends T> aggregateType : aggregateTypes) {
+            typeToFactory.put(aggregateType, configuredAggregateFactory != null
+                    ? configuredAggregateFactory
+                    : new NoArgumentConstructorCreationPolicyAggregateFactory<>(aggregateType)
+            );
+        }
+        return typeToFactory;
     }
 
     /**
@@ -130,7 +167,7 @@ public class AggregateAnnotationCommandHandler<T> implements CommandHandlingComp
                         messageHandler -> commandBus.subscribe(entry.getKey(), messageHandler)
                 ))
                 .filter(Objects::nonNull)
-                .collect(Collectors.toList());
+                .toList();
         return () -> subscriptions.stream().map(Registration::cancel).reduce(Boolean::logicalOr).orElse(false);
     }
 
@@ -148,7 +185,7 @@ public class AggregateAnnotationCommandHandler<T> implements CommandHandlingComp
                       .flatMap(List::stream)
                       .collect(Collectors.groupingBy(this::getHandlerSignature))
                       .forEach((signature, commandHandlers) -> initializeHandler(
-                              aggregateModel, commandHandlers.get(0), handlersFound
+                              aggregateModel, commandHandlers.getFirst(), handlersFound
                       ));
 
         return handlersFound;
@@ -171,7 +208,7 @@ public class AggregateAnnotationCommandHandler<T> implements CommandHandlingComp
             Optional<AggregateCreationPolicy> policy = handler.unwrap(CreationPolicyMember.class)
                                                               .map(CreationPolicyMember::creationPolicy);
 
-            MessageHandler<CommandMessage<?>, CommandResultMessage<?>> messageHandler = null;
+            MessageHandler<CommandMessage<?>, CommandResultMessage<?>> messageHandler;
             if (cmh.isFactoryHandler()) {
                 assertThat(
                         policy,
@@ -180,19 +217,15 @@ public class AggregateAnnotationCommandHandler<T> implements CommandHandlingComp
                 );
                 messageHandler = new AggregateConstructorCommandHandler(handler);
             } else {
-                switch (policy.orElse(NEVER)) {
-                    case ALWAYS:
-                        messageHandler =
-                                new AlwaysCreateAggregateCommandHandler(handler, creationPolicyAggregateFactory);
-                        break;
-                    case CREATE_IF_MISSING:
-                        messageHandler =
-                                new AggregateCreateOrUpdateCommandHandler(handler, creationPolicyAggregateFactory);
-                        break;
-                    case NEVER:
-                        messageHandler = new AggregateCommandHandler(handler);
-                        break;
-                }
+                messageHandler = switch (policy.orElse(NEVER)) {
+                    case ALWAYS -> new AlwaysCreateAggregateCommandHandler(
+                            handler, factoryPerType.get(handler.declaringClass())
+                    );
+                    case CREATE_IF_MISSING -> new AggregateCreateOrUpdateCommandHandler(
+                            handler, factoryPerType.get(handler.declaringClass())
+                    );
+                    case NEVER -> new AggregateCommandHandler(handler);
+                };
             }
             handlersFound.add(messageHandler);
             supportedCommandsByName.computeIfAbsent(cmh.commandName(), key -> new HashSet<>()).add(messageHandler);
@@ -217,7 +250,21 @@ public class AggregateAnnotationCommandHandler<T> implements CommandHandlingComp
                        .findFirst()
                        .orElseThrow(() -> new NoHandlerForCommandException(message))
                        .handle(message, processingContext)
-                       .mapMessage(GenericCommandResultMessage::asCommandResultMessage);
+                       .mapMessage(m -> asCommandResultMessage(m, messageNameResolver::resolve));
+    }
+
+    @SuppressWarnings("unchecked")
+    private static <R> CommandResultMessage<R> asCommandResultMessage(@Nullable Object commandResult, @Nonnull Function<Object, QualifiedName> nameResolver) {
+        if (commandResult instanceof CommandResultMessage) {
+            return (CommandResultMessage<R>) commandResult;
+        } else if (commandResult instanceof Message) {
+            Message<R> commandResultMessage = (Message<R>) commandResult;
+            return new GenericCommandResultMessage<>(commandResultMessage);
+        }
+        QualifiedName name = commandResult == null
+                ? QualifiedNameUtils.fromDottedName("empty.command.result")
+                : nameResolver.apply(commandResult);
+        return new GenericCommandResultMessage<>(name, (R) commandResult);
     }
 
     @Override
@@ -268,6 +315,7 @@ public class AggregateAnnotationCommandHandler<T> implements CommandHandlingComp
         private HandlerDefinition handlerDefinition;
         private AggregateModel<T> aggregateModel;
         private CreationPolicyAggregateFactory<T> creationPolicyAggregateFactory;
+        private MessageNameResolver messageNameResolver = new ClassBasedMessageNameResolver();
 
         /**
          * Sets the {@link Repository} used to add and load Aggregate instances of generic type {@code T} upon handling
@@ -355,17 +403,33 @@ public class AggregateAnnotationCommandHandler<T> implements CommandHandlingComp
         }
 
         /**
-         * Sets the {@link CreationPolicyAggregateFactory<T>} for generic type {@code T}. The aggregate factory must
-         * produce a new instance of the Aggregate root based on the supplied Identifier.
+         * Sets the {@link CreationPolicyAggregateFactory<T>} for generic type {@code T}.
+         * <p>
+         * The aggregate factory must produce a new instance of the aggregate root based on the supplied identifier.
+         * When dealing with a polymorphic aggregate, the given {@code creationPolicyAggregateFactory} will be used for
+         * <b>every</b> {@link AggregateModel#types() type}.
          *
-         * @param creationPolicyAggregateFactory that returns the aggregate instance based on the identifier
-         * @return the current Builder instance, for fluent interfacing
+         * @param creationPolicyAggregateFactory The {@link CreationPolicyAggregateFactory} the constructs an aggregate
+         *                                       instance based on an identifier.
+         * @return The current Builder instance, for fluent interfacing.
          */
         public Builder<T> creationPolicyAggregateFactory(
                 CreationPolicyAggregateFactory<T> creationPolicyAggregateFactory
         ) {
-            assertNonNull(creationPolicyAggregateFactory, "CreationPolicyAggregateFactory may not be null");
             this.creationPolicyAggregateFactory = creationPolicyAggregateFactory;
+            return this;
+        }
+
+        /**
+         * Sets the {@link MessageNameResolver} used to resolve the {@link QualifiedName} when dispatching {@link CommandMessage CommandMessages}.
+         * If not set, a {@link ClassBasedMessageNameResolver} is used by default.
+         *
+         * @param messageNameResolver The {@link MessageNameResolver} used to provide the {@link QualifiedName} for {@link CommandMessage CommandMessages}.
+         * @return The current Builder instance, for fluent interfacing.
+         */
+        public Builder<T> messageNameResolver(MessageNameResolver messageNameResolver) {
+            assertNonNull(messageNameResolver, "MessageNameResolver may not be null");
+            this.messageNameResolver = messageNameResolver;
             return this;
         }
 
